<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_nav_today"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_nav_report"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_nav_categories"
            android:title="@string/nav_categories" />
    </group>
    <group android:id="@+id/group2" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>