<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:text="@string/today_total" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#000000" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/total_expense_sum_text_view"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="start|center_vertical"
                android:textSize="44sp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/total_expense_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_toEndOf="@id/total_expense_sum_text_view"
                android:layout_toRightOf="@id/total_expense_sum_text_view"
                android:gravity="end|center_vertical"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:textSize="22sp"
                android:singleLine="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:text="@string/today_expenses" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#000000" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/expenses_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@style/Base.Widget.AppCompat.ProgressBar" />

        </LinearLayout>

        <ListView
            android:id="@+id/expenses_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/expenses_empty_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/add_expense_button_if_empty_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
